--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "gulp-ruby-sass": "^1.0.0-alpha.3",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1"
+  },
+  "dependencies": {
+    "coffee-script": "^1.9.2",
+    "marked": "^0.3.3"
   }
 }
